# disca

./: Cargo.toml  README.md
disca-parser/: Cargo.toml
disca-parser/src/: errors.rs  homomorphic.rs  lib.rs  main.rs  optimizer.rs  parser.rs  wasm_module.rs
disca-parser/src/wasm/: mod.rs  parser.rs  wasm_module.rs
disca-parser/tests/: tests.rs
disca-parser/wasm_program/: Cargo.toml  lib.rs  wasm_program.wasm
disca-parser/wasm_program/src/: lib.rs
