[package]
name = "disca-parser"
version = "0.1.0"
edition = "2021"
description = "WASM to FHE circuit parser and optimizer"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/muse254/disca"
keywords = ["wasm", "fhe", "circuit", "parser", "blockchain"]
categories = ["command-line-utilities", "parsing", "cryptography"]

[[bin]]
name = "disca-parser"
path = "src/main.rs"

[lib]
name = "disca_parser"
path = "src/lib.rs"

[dependencies]
wasmparser = "0.236.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo"] }
anyhow = "1"
thiserror = "2"
log = "0.4.27"

[dev-dependencies]
env_logger = "0.11.8"
